--- a/src/Pages/Hotel/Hotel.css
+++ b/src/Pages/Hotel/Hotel.css
@@ -5,6 +5,47 @@
     margin-top: 20px;
 }
 
+.slider {
+    position: sticky;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.426);
+    z-index: 999;
+    display: flex;
+    align-items: center;
+}
+
+.close {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    font-size: 30px;
+    color: lightgray;
+    cursor: pointer;
+}
+
+.arrow {
+    margin: 20px;
+    font-size: 50px;
+    color: lightgray;
+    cursor: pointer;
+}
+
+.slider-wrapper {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.slider-img {
+    width: 80%;
+    height: 80vh;
+}
+
 .hotel-wrapper {
     width: 100%;
     max-width: 1024px;
